# agentic-rag-pydantic-ai

./: README.md  docker-compose.yaml  env.example
agent/: README.md  pyproject.toml
agent/src/: agent.py  agent_core.py  jira_agent.py  jira_client.py  main.py  mcp_jira.py  pydantic_agent_jira.py  rag-agentic.py  rag_agent.py  tools.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/components/: agentic-header.tsx  intelligent-copilot-provider.tsx  left-sidebar.tsx  reference-chip.tsx  tool-renderer.tsx
src/lib/: types.ts
